# lf-transcribe

./: .env  .env.example  .gitignore  README.md  postprocess.py  pyproject.toml  transcribe.py
.devcontainer/: devcontainer.json
configs/: example.yaml
src/sermon_transcribe/: __init__.py  align.py  asr.py  audio.py  cli.py  config.py  exporters.py  logging_setup.py  metrics.py  prose.py
tests/: test_prose.py
